--- a/01.前端 Web 技术发展史/MVC/index.html
+++ b/01.前端 Web 技术发展史/MVC/index.html
@@ -13,6 +13,7 @@
 
       // 定义 model 并监听数据变化
       const model = {};
+
       var content = "";
 
       Object.defineProperty(model, "content", {
@@ -27,8 +28,8 @@
 
       // 定义 view 以及视图更新方法
       const view = {
-        update: () => {
-          text.innerHTML = content;
+        update: (newContent) => {
+          text.innerHTML = newContent;
         },
       };
 
